<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RentBnb</string>

    <!-- Landing  -->
    <string name="landing_title">\"Explore the water\nlike never before.\"</string>
    <string name="landing_subtitle">Seamless booking, Flexible options, and unforgettable experiences on every trip.</string>

    <!-- Tutorial -->
    <string name="tutorial_discover_title">Discover and Choose</string>
    <string name="tutorial_discover_desc">Find boats using filters, maps, photos, and real reviews—all in one place.</string>

    <string name="tutorial_book_title">Book Your Trip</string>
    <string name="tutorial_book_desc">Check availability, pick your schedule, and book instantly or send a request in just a few taps.</string>

    <string name="tutorial_pay_title">Pay Securely</string>
    <string name="tutorial_pay_desc">Use GCash, Maya, or cards with flexible payments, clear pricing, and instant confirmation.</string>

    <string name="tutorial_safe_title">Safe &amp; Reliable</string>
    <string name="tutorial_safe_desc">Enjoy verified boats, trusted reviews, GPS tracking, and real-time weather protection.</string>

    <string name="tutorial_smart_title">Smart Travel</string>
    <string name="tutorial_smart_desc">Get personalized boat picks, smart itineraries, and weather-based suggestions instantly.</string>

    <!-- Final -->
    <string name="final_title">Ready to set sail?</string>
    <string name="final_subtitle">Start exploring boats and plan your next adventure today.</string>
    <string name="get_started">Get Started</string>

    <!--  Bottom Navigation  -->
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_add">Add new</string>
    <string name="nav_bookings">History</string>
    <string name="nav_profile">Profile</string>

    <string name="no_data_found">Ooopsies! Nothing in here..yet..</string>"
    <string name="add_favorites">Start finding your favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_island">Select an Island</string>

    <string name="default_web_client_id">21228965617-758kckj5uqjieqi6gq2i62lmpfbe3j6b.apps.googleusercontent.com</string>
</resources>
