<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_final" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim_final" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/jost"
            android:gravity="end"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/final_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_subtitle"
            android:textColor="#CCffffff"
            android:textSize="18sp"
            android:fontFamily="@font/jost"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:layout_marginBottom="28dp" />

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:paddingHorizontal="28dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/jost"
            android:background="@drawable/btn_get_started_bg"
            android:onClick="onGetStartedClicked"
            android:elevation="4dp" />

    </LinearLayout>

</FrameLayout>
